--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,58 @@
 @import "tailwindcss";
+@import "weather-icons/css/weather-icons.min.css";
 
 /* COLORS */
+:root {
+  --primary-color: #0f172a;
+  /* sfondo principale */
+  --card-light: #1e293b;
+  /* box meteo */
+  --card-lighter: #334155;
+  /* box commenti */
+  --text-light: #f1f5f9;
+  /* testi */
+  --text-lighter: #cbd5e1;
+  /* testi secondari */
+  --accent-color: #38bdf8;
+  /* pulsanti / dettagli */
+}
+
 .primary-color {
+  background-color: var(--primary-color);
+}
+
+.card-light {
+  background-color: var(--card-light);
+}
+
+.card-lighter {
+  background-color: var(--card-lighter);
+}
+
+.text-light {
+  color: var(--text-light);
+}
+
+.text-lighter {
+  color: var(--text-lighter);
+}
+
+.secondary-color {
+  background-color: var(--card-lighter);
+}
+
+.button {
+  background-color: var(--accent-color);
+  color: white;
+  transition: background 0.2s ease;
+}
+
+.button:hover {
+  background-color: #0ea5e9;
+}
+
+/* Old */
+/* .primary-color {
     background-color: #FFA63E;
 }
 
@@ -23,38 +74,38 @@
 
 .card-lighter {
     background-color: #FFD588;
-}
+} */
 
 /* Scrollbar */
 ::-webkit-scrollbar {
-    width: 0px;
-    height: 0px;
+  width: 0px;
+  height: 0px;
 }
 
 ::-webkit-scrollbar-track {
-    background: transparent;
+  background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #6E4329;
-    border-radius: 999px;
-    transition: 0.2s;
+  background-color: #6E4329;
+  border-radius: 999px;
+  transition: 0.2s;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: #824F30;
+  background-color: #824F30;
 }
 
 
 /* UTILITIES */
 .button {
-    background-color: #FFA63E;
-    color: #64492e;
-    cursor: pointer;
-    transition: 0.2s;
-    font-size: 1rem;
+  background-color: #FFA63E;
+  color: #64492e;
+  cursor: pointer;
+  transition: 0.2s;
+  font-size: 1rem;
 }
 
 .button:hover {
-    background-color: #FFB561;
+  background-color: #FFB561;
 }
